--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -40,6 +40,7 @@
 .buttonCount{
     width: 100%;
     height: 5rem;
+    border: 1px solid transparent;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,4 +56,14 @@
 
 .buttonCount:hover{
     background: var(--blue-dark);
+}
+.buttonCountActive{
+    background: var(--white);
+    color: var(--title);
+    transition: all 0.2s;
+    border: 1px solid transparent;
+}
+.buttonCountActive:hover{
+    background-color: var(--red);
+    color: var(--white);
 }
