--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -54,7 +54,7 @@
     transition: all 0.2s;
 }
 
-.buttonCount:hover{
+.buttonCount:not(:disabled):hover{
     background: var(--blue-dark);
 }
 .buttonCountActive{
@@ -63,7 +63,13 @@
     transition: all 0.2s;
     border: 1px solid transparent;
 }
-.buttonCountActive:hover{
+.buttonCountActive:not(:disabled):hover{
     background-color: var(--red);
     color: var(--white);
+}
+
+.buttonCount:disabled{
+    background: var(--white);
+    color: var(--text);
+    cursor: not-allowed;
 }
